커밋메시지

--- a/templates/result/ENTJ.html
+++ b/templates/result/ENTJ.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"새로운 사람 만나 인사이트 얻을래!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#타고난 리더, #비전 제시, #대담한 용기</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 비전을 제시할 수 있는 리더에요.</li>
+                <li>상상력이 아주 풍부해요.</li>
+                <li>문제가 생겼을 때 다양한 방법을 모색하는 능력이 뛰어나요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">고급 명함 케이스</li>
+                <li class="">세련된 향수</li>
+                <li class="">서류가방</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">당신은 미래에 대한 비전을 제시하고 성취에 강한 의지가 있는 타고난 리더에요. 현재에 만족하기 보다는 늘 배울점을 찾고 싶다는 욕구가 있죠. "새로운 사람들을 만나면서 인사이트 얻는 것을 즐기는" 당신에게는 첫 인상을 돋보여 줄 수 있는 선물이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
