--- a/templates/result/INTP.html
+++ b/templates/result/INTP.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"가만히 앉아 멍 때리면서 이런저런 사색하고 싶어!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#지식 욕구 뿜뿜, #비평적 안목, #사색왕</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 자기 객관화에 능한 사람이에요.</li>
+                <li>비평적인 관점을 가진 뛰어난 전략가에요.</li>
+                <li>호기심이 많고 지적인 탐색을 즐겨요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">고급 필기구</li>
+                <li class="">e-book리더기</li>
+                <li class="">양장노트</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">당신은 새로운 지식을 얻는 것을 좋아하는 사람이에요. 호기심이 많으니 끊임없이 아이디어가 샘솟죠. 그때 그때 생각나는 아이디어를 바로 기록으로 남겨두는 그 순간이 참 행복해요. 당신에게는 지적 능력을 자극하거나 "사색하는" 것에 도움이 되는 선물이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
