--- a/templates/result/ISFJ.html
+++ b/templates/result/ISFJ.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"나 자신을 사랑하라!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#성실함의 끝판왕, #온화한 성품, #안전한 보호막</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 성실하고 온화한 성향의 소유자에요. </li>
+                <li>협조를 아주 잘하고 책임감이 강해요.</li>
+                <li>소중한 이들을 수호하는데 헌신적이에요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">마사지기</li>
+                <li class="">캔들</li>
+                <li class="">아로마 오일</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">온화한 성품을 지닌 당신은 성실함과 책임감이 강한 사람이에요. 당신은 주변 사람들을 생각하고 돌보는 것에 헌식적이에요. 때론 나보다 다른 사람이 우선일 때가 있어요. "LoveYourself!" 지친 나 자신을 돌볼 필요가 있는 당신에게는 안정을 제공할 수 있는 선물이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
