--- a/templates/result/ISTP.html
+++ b/templates/result/ISTP.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"몰입할 수 있는 환경이 필요해!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#논리정연, #카멜레온, #맥가이버</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 논리적이고 적응력이 뛰어난 사람이에요. </li>
+                <li>대담하고 현실적인 성향이에요. </li>
+                <li>다양한 도구 사용에 능숙한 만능 재주꾼이에요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">안락의자</li>
+                <li class="">빈백</li>
+                <li class="">무드등</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">당신은 논리적이고 현실적인 사람이에요. 기계와 같은 다양한 도구 사용에 능하고 지적인 탐구를 즐기는 당신에게는 혼자만의 공간이 필요하죠.  "몰입할 수 있는 환경이 필요한" 당신에게는 편안한 가구나 조명이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
