--- a/templates/result/ENFJ.html
+++ b/templates/result/ENFJ.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"널 위한 선물을 준비했어!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#협동 으쌰으쌰, #선한 인플루언서, #넘치는 카리스마</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 타인의 성장을 도모하고 협동하는데 능한 사람이에요.</li>
+                <li>언변에 능하고 청중을 압도하는 카리스마를 지녔어요. </li>
+                <li>정리되고 계획된 것을 좋아해요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">클래스 수강권</li>
+                <li class="">즉석카메라</li>
+                <li class="">손편지</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">당신은 타인의 성장을 도모하는 것에 행복을 느끼는  배려심 깊은 사람이에요.  외향적인 성격으로 활기가 넘치지만 소소한 것에 행복을 느끼기도 하죠.  물질적인 것도 좋지만 "네 생각나서 준비했어" 하며 관심을 표현하는 정성이 담긴 감동적인 선물이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
