--- a/templates/result/ENFP.html
+++ b/templates/result/ENFP.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"이건 나만 가지고 싶어!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#얼리어답터, #아이디어뱅크, #열정뿜뿜</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 새로운 관계를 만드는 것에 열정적인 사람이에요. </li>
+                <li>활발한 성격의 소유자로 사람들과 어울리기를 좋아해요.  </li>
+                <li>매우 창의적이고 항상 웃을 거리를 찾아다녀요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">핸드메이드 선물</li>
+                <li class="">한정판 신발</li>
+                <li class="">레터링 케이크</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">당신은 창의적이며 새로운 것들을 탐닉하는 사람이에요. 남들과는 다른 것, 평범하지 않은 것들을 추구하는 당신에게 기성품은 시시하고 재미없죠.  '나만 가지고 있는 것', 서프라이즈를 즐기는 당신에게는 공산품 보다는 유니크한 선물이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
