--- a/templates/result/ESFJ.html
+++ b/templates/result/ESFJ.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"친구들과 함께 하고 싶어!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#봉사왕, #세심한 배려, #넘치는 인기</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 친절함을 바탕으로 타인에게 봉사하는 사람이에요.</li>
+                <li>리액션이 좋고 공감능력이 뛰어나서 주변에 사람이 많아요.</li>
+                <li>일관성이 있고 세심한 성향이에요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">폴라로이드 카메라</li>
+                <li class="">우정아이템</li>
+                <li class="">포토 프린터</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">당신은 평소 주변 사람들을 보물 같이 여기는 사람이에요. 상대방이 필요한 것을 잘 기억하고 챙겨주는 것을 잘하죠. 또한 리액션과 공감 능력이 뛰어나서 늘 주변에 사람이 많아요. 늘 "친구들과 함께 하고 싶은" 당신에게는 추억을 기억할 수 있는 선물이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
