--- a/templates/result/ESFP.html
+++ b/templates/result/ESFP.html
@@ -29,24 +29,24 @@
             </div>
 
             <h2 class="red-font mb-2">당신의 선물 유형은?</h2>
-            <h1 id="gift-type" class="red-font mb-5">"체계적으로 잘 관리하고 싶어!"</h1>
+            <h1 id="gift-type" class="red-font mb-5">"욜로로 살고 싶어!"</h1>
 
-            <h3 id="keyword" class="mb-3">#관리왕, #자기관리 철저, #인간 관계 깔끔</h3>
+            <h3 id="keyword" class="mb-3">#흥부자, #즉흥적, #에너지 폭발</h3>
             <ul class="col-12 mb-5">
-                <li>당신은 현실적으로 주어진 상황을 잘 관리하려는 욕구가 높은 사람이에요. </li>
-                <li>사물뿐만 아니라 주변 사람들까지 잘 챙겨요. </li>
-                <li>실용적으로 사무적인 일을 하는 능력 또한 뛰어나요.</li>
+                <li>당신은 개성이 강하고 톡톡 튀는 매력을 가진 연예인이에요.</li>
+                <li>사람들과 사교를 즐기는 외향적 성향의 소유자에요.</li>
+                <li>틀에 박힌 것은 싫어하는 자유로운 영혼이에요.</li>
             </ul>
 
             <h2 class="red-font mb-4">당신을 위한 선물 추천</h2>
             <ul class="gift-rcnd row mb-5">
-                <li class="">플래너</li>
-                <li class="">만년필</li>
-                <li class="">스마트워치</li>
+                <li class="">트랜디한 운동화</li>
+                <li class="">블루투스 스피커</li>
+                <li class="">함께 떠나는 여행</li>
             </ul>
 
             <h2 class="red-font mb-2">선물 추천 이유</h2>
-            <p class="mb-5">당신은 효율적으로 시간을 관리하는 것을 중요하게 생각하고, 계획대로 일이 진행되는 것에 쾌감을 느끼는 사람입니다. 실용적인 것을 추구해요. 자기관리가 철저한 당신에게는 "체계적으로 일정을 관리할 수 있는" 선물이 좋겠네요.</p>
+            <p class="mb-5">당신은 외향적인 성향이며 즉흥적이고 에너지가 넘치는 사람이에요. 흥이 많은 당신에게는 노래만 있다면 지금 여기가 파티장이죠. "You Only Live Once(욜로)" 를 추구하는 당신에게는 언제든 떠날 때 함께 할? 수 있는 선물이 좋겠네요.</p>
         </div>
         <div class="btn-wrapper row">
             <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
